[gd_scene load_steps=14 format=3 uid="uid://c1pfxxsltbikv"]

[ext_resource type="Script" path="res://addons/aero_tools/aircraft/phoenix/phoenix.gd" id="1"]
[ext_resource type="Script" path="res://addons/aero_tools/scripts/aero_surface.gd" id="2"]
[ext_resource type="Material" path="res://addons/aero_tools/resources/Plane_Metal.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://bwtcvur732fvd" path="res://addons/aero_tools/uires/hud_shared/hud_shared.tscn" id="4"]
[ext_resource type="Environment" uid="uid://hv8jdu5g217v" path="res://addons/aero_tools/resources/zfs_basic_env.tres" id="4_8iccb"]
[ext_resource type="Script" path="res://addons/aero_tools/scripts/aero_pid_calc.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://c4lctpxogn5m4" path="res://addons/aero_tools/assets/aircraft_parts/wheel_small/wheel_medium.tscn" id="7_hervv"]
[ext_resource type="Script" path="res://addons/aero_tools/cameras/Camera_FPV.gd" id="8"]

[sub_resource type="CapsuleShape3D" id="1"]
height = 8.0

[sub_resource type="BoxShape3D" id="2"]
margin = 0.001
size = Vector3(11, 0.1, 1)

[sub_resource type="BoxShape3D" id="4"]
margin = 0.001
size = Vector3(2, 0.1, 0.8)

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.0784314, 0.0705882, 0.0745098, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_30stq"]

[node name="Phoenix" type="VehicleBody3D"]
mass = 800.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0, -1)
inertia = Vector3(5000, 4000, 3000)
can_sleep = false
continuous_cd = true
angular_damp = 10.0
script = ExtResource("1")

[node name="CollisionShapeFuse" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 1)
shape = SubResource("1")

[node name="CollisionShapeWing" type="CollisionShape3D" parent="."]
shape = SubResource("2")

[node name="CollisionShapeTailLeft" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -1.057, 1.032, 5)
shape = SubResource("4")

[node name="CollisionShapeTailRight" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 1.057, 1.032, 5)
shape = SubResource("4")

[node name="WheelNLG" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, -2.8)
use_as_steering = true
wheel_radius = 0.2
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 100000.0
damping_compression = 0.99
damping_relaxation = 0.995

[node name="WheelMLGLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55, -1.2, 0.35)
use_as_traction = true
wheel_radius = 0.2
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 100000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="WheelMLGRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55, -1.2, 0.35)
use_as_traction = true
wheel_radius = 0.2
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 100000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="Fuse" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
script = ExtResource("2")
length_chord_root = 0.001
length_chord_tip = 0.001
length_span = 0.001

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Fuse"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
height = 8.0
sides = 32
material = ExtResource("3")

[node name="CSGSphereNose" type="CSGSphere3D" parent="Fuse/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 4, 0)
radial_segments = 32
rings = 32
material = ExtResource("3")

[node name="CSGSphereTail" type="CSGSphere3D" parent="Fuse/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, 0, -4, 0)
radial_segments = 32
rings = 32
material = ExtResource("3")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Fuse/CSGCylinder3D/CSGSphereTail"]
operation = 2
radius = 0.2
sides = 32
cone = true
material = SubResource("3")

[node name="WingL" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, -3, 0, 0)
script = ExtResource("2")
length_span = 5.0
pos_COP = Vector3(0, 0, -0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="WingL"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
height = 5.0
sides = 32
material = ExtResource("3")

[node name="WingR" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 3, 0, 0)
script = ExtResource("2")
length_span = 5.0
pos_COP = Vector3(0, 0, -0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="WingR"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
height = 5.0
sides = 32
material = ExtResource("3")

[node name="AileronL" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3, 0, 0.5)
script = ExtResource("2")
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 2.4
pos_COP = Vector3(0, 0, 0.125)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AileronL"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125)
radius = 0.125
height = 2.4
sides = 32
material = ExtResource("3")

[node name="AileronR" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3, 0, 0.5)
script = ExtResource("2")
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 2.4
pos_COP = Vector3(0, 0, 0.125)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AileronR"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125)
radius = 0.125
height = 2.4
sides = 32
material = ExtResource("3")

[node name="FlapL" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, 0, 0.5)
script = ExtResource("2")
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 2.4
pos_COP = Vector3(0, 0, 0.125)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="FlapL"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125)
radius = 0.125
height = 2.4
sides = 32
material = ExtResource("3")

[node name="FlapR" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 0, 0.5)
script = ExtResource("2")
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 2.4
pos_COP = Vector3(0, 0, 0.125)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="FlapR"]
transform = Transform3D(-4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125)
radius = 0.125
height = 2.4
sides = 32
material = ExtResource("3")

[node name="RuddervatorL" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -1.075, 1.05, 5)
script = ExtResource("2")
length_chord_root = 0.8
length_chord_tip = 0.8
length_span = 2.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="RuddervatorL"]
transform = Transform3D(0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.4
sides = 32
material = ExtResource("3")

[node name="RuddervatorR" type="Node3D" parent="."]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 1.075, 1.05, 5)
script = ExtResource("2")
length_chord_root = 0.8
length_chord_tip = 0.8
length_span = 2.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="RuddervatorR"]
transform = Transform3D(0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.4
sides = 32
material = ExtResource("3")

[node name="CameraFPV" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.5)
environment = ExtResource("4_8iccb")
fov = 60.0
far = 1e+06
script = ExtResource("8")

[node name="CameraExt" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2, 10)
cull_mask = 1048557
environment = ExtResource("4_8iccb")
attributes = SubResource("CameraAttributesPractical_30stq")
current = true
fov = 60.0
far = 100000.0

[node name="PIDCalcPitchRate" type="Node" parent="."]
script = ExtResource("6")
term_P = 0.25
term_I = 1.0
term_D = 0.01
integral_max = 20.0
param_tuning_active = false

[node name="LGPointNLG" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, -2.8)

[node name="StrutUpper" type="CSGCylinder3D" parent="LGPointNLG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
radius = 0.02
height = 0.25
sides = 32
material = ExtResource("3")

[node name="StrutLower" type="CSGCylinder3D" parent="LGPointNLG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
radius = 0.015
height = 1.0
sides = 32
material = ExtResource("3")

[node name="Axle" type="CSGCylinder3D" parent="LGPointNLG/StrutLower"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0)
radius = 0.01
height = 0.08
sides = 32
material = ExtResource("3")

[node name="WheelLeft" parent="LGPointNLG/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, 0.0700001, 0)

[node name="WheelRight" parent="LGPointNLG/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, -0.0700001, 0)

[node name="LGPointMLGLeft" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0.35)

[node name="StrutUpper" type="CSGCylinder3D" parent="LGPointMLGLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
radius = 0.02
height = 0.5
sides = 32
material = ExtResource("3")

[node name="StrutLower" type="CSGCylinder3D" parent="LGPointMLGLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
radius = 0.015
height = 1.0
sides = 32
material = ExtResource("3")

[node name="Axle" type="CSGCylinder3D" parent="LGPointMLGLeft/StrutLower"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0)
radius = 0.01
height = 0.08
sides = 32
material = ExtResource("3")

[node name="WheelLeft" parent="LGPointMLGLeft/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, 0.0700001, 0)

[node name="WheelRight" parent="LGPointMLGLeft/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, -0.0700001, 0)

[node name="LGPointMLGRight" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0.35)

[node name="StrutUpper" type="CSGCylinder3D" parent="LGPointMLGRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
radius = 0.02
height = 0.5
sides = 32
material = ExtResource("3")

[node name="StrutLower" type="CSGCylinder3D" parent="LGPointMLGRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
radius = 0.015
height = 1.0
sides = 32
material = ExtResource("3")

[node name="Axle" type="CSGCylinder3D" parent="LGPointMLGRight/StrutLower"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0)
radius = 0.01
height = 0.08
sides = 32
material = ExtResource("3")

[node name="WheelLeft" parent="LGPointMLGRight/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, 0.0700001, 0)

[node name="WheelRight" parent="LGPointMLGRight/StrutLower/Axle" instance=ExtResource("7_hervv")]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, -0.0700001, 0)

[node name="RadioAltimeter" type="RayCast3D" parent="."]
target_position = Vector3(0, -1000, 0)

[node name="HUDShared" parent="." instance=ExtResource("4")]
